--- a/package.json
+++ b/package.json
@@ -15,9 +15,25 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/localize": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@progress/kendo-angular-buttons": "18.5.2",
+    "@progress/kendo-angular-common": "18.5.2",
+    "@progress/kendo-angular-dateinputs": "^18.5.2",
+    "@progress/kendo-angular-dialog": "18.5.2",
+    "@progress/kendo-angular-icons": "18.5.2",
+    "@progress/kendo-angular-inputs": "^18.5.2",
+    "@progress/kendo-angular-intl": "18.5.2",
+    "@progress/kendo-angular-l10n": "18.5.2",
+    "@progress/kendo-angular-navigation": "18.5.2",
+    "@progress/kendo-angular-popup": "18.5.2",
+    "@progress/kendo-angular-utils": "18.5.2",
+    "@progress/kendo-drawing": "^1.21.0",
+    "@progress/kendo-licensing": "^1.5.0",
+    "@progress/kendo-svg-icons": "^4.0.0",
+    "@progress/kendo-theme-default": "^10.3.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
