--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@progress/kendo-angular-l10n": "18.5.2",
     "@progress/kendo-angular-navigation": "18.5.2",
     "@progress/kendo-angular-popup": "18.5.2",
+    "@progress/kendo-angular-tooltip": "^18.5.2",
     "@progress/kendo-angular-utils": "18.5.2",
     "@progress/kendo-drawing": "^1.21.0",
     "@progress/kendo-licensing": "^1.5.0",
