--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@progress/kendo-drawing": "^1.21.0",
     "@progress/kendo-licensing": "^1.5.0",
     "@progress/kendo-svg-icons": "^4.0.0",
+    "@progress/kendo-theme-bootstrap": "^10.5.0",
     "@progress/kendo-theme-default": "^10.3.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
