--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@progress/kendo-angular-inputs": "^18.5.2",
     "@progress/kendo-angular-intl": "18.5.2",
     "@progress/kendo-angular-l10n": "18.5.2",
+    "@progress/kendo-angular-label": "^18.5.2",
+    "@progress/kendo-angular-layout": "^18.5.2",
     "@progress/kendo-angular-navigation": "18.5.2",
     "@progress/kendo-angular-popup": "18.5.2",
+    "@progress/kendo-angular-progressbar": "18.5.2",
     "@progress/kendo-angular-tooltip": "^18.5.2",
     "@progress/kendo-angular-utils": "18.5.2",
     "@progress/kendo-drawing": "^1.21.0",
