feat(dependencies): add Kendo UI angular grid

--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@angular/router": "^17.3.0",
     "@progress/kendo-angular-buttons": "18.5.2",
     "@progress/kendo-angular-common": "18.5.2",
-    "@progress/kendo-angular-dateinputs": "^18.5.2",
+    "@progress/kendo-angular-dateinputs": "18.5.2",
     "@progress/kendo-angular-dialog": "18.5.2",
+    "@progress/kendo-angular-grid": "^18.5.2",
     "@progress/kendo-angular-icons": "18.5.2",
-    "@progress/kendo-angular-inputs": "^18.5.2",
+    "@progress/kendo-angular-inputs": "18.5.2",
     "@progress/kendo-angular-intl": "18.5.2",
     "@progress/kendo-angular-l10n": "18.5.2",
-    "@progress/kendo-angular-label": "^18.5.2",
-    "@progress/kendo-angular-layout": "^18.5.2",
+    "@progress/kendo-angular-label": "18.5.2",
+    "@progress/kendo-angular-layout": "18.5.2",
     "@progress/kendo-angular-navigation": "18.5.2",
     "@progress/kendo-angular-notification": "^18.5.2",
     "@progress/kendo-angular-popup": "18.5.2",
@@ -44,7 +45,14 @@
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-angular-dropdowns": "18.5.2",
+    "@progress/kendo-angular-excel-export": "18.5.2",
+    "@progress/kendo-angular-pager": "18.5.2",
+    "@progress/kendo-angular-pdf-export": "18.5.2",
+    "@progress/kendo-angular-toolbar": "18.5.2",
+    "@progress/kendo-angular-treeview": "18.5.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
