--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@progress/kendo-angular-common": "18.5.2",
     "@progress/kendo-angular-dateinputs": "18.5.2",
     "@progress/kendo-angular-dialog": "18.5.2",
-    "@progress/kendo-angular-grid": "^18.5.2",
+    "@progress/kendo-angular-dropdowns": "18.5.2",
+    "@progress/kendo-angular-excel-export": "18.5.2",
     "@progress/kendo-angular-icons": "18.5.2",
     "@progress/kendo-angular-inputs": "18.5.2",
     "@progress/kendo-angular-intl": "18.5.2",
@@ -32,27 +33,24 @@
     "@progress/kendo-angular-layout": "18.5.2",
     "@progress/kendo-angular-navigation": "18.5.2",
     "@progress/kendo-angular-notification": "^18.5.2",
+    "@progress/kendo-angular-pager": "18.5.2",
+    "@progress/kendo-angular-pdf-export": "18.5.2",
     "@progress/kendo-angular-popup": "18.5.2",
     "@progress/kendo-angular-progressbar": "18.5.2",
+    "@progress/kendo-angular-toolbar": "18.5.2",
     "@progress/kendo-angular-tooltip": "^18.5.2",
+    "@progress/kendo-angular-treeview": "18.5.2",
     "@progress/kendo-angular-utils": "18.5.2",
+    "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.21.0",
     "@progress/kendo-licensing": "^1.5.0",
     "@progress/kendo-svg-icons": "^4.0.0",
-    "@progress/kendo-theme-bootstrap": "^10.5.0",
     "@progress/kendo-theme-default": "^10.3.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-angular-dropdowns": "18.5.2",
-    "@progress/kendo-angular-excel-export": "18.5.2",
-    "@progress/kendo-angular-pager": "18.5.2",
-    "@progress/kendo-angular-pdf-export": "18.5.2",
-    "@progress/kendo-angular-toolbar": "18.5.2",
-    "@progress/kendo-angular-treeview": "18.5.2"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
