feat(docker): aggiungere file Docker e configurazione per lo sviluppo e produzione feat(tests): aggiungere test per GoogleAuthService fix(index.html): correggere la struttura del documento e aggiungere script Google docs(README): aggiornare le istruzioni per la build e l'esecuzione del progetto

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "docker:dev": "npm run docker:dev-clean && npm run docker:dev-run",
-    "docker:dev-run": "docker run -p 4200:4200 --name angular-dev naar-marketplace",
+    "docker:dev-run": "docker run -p 4200:4200 --name angular-dev thedollmaster98/naar-marketplace",
+    "docker:prod": "npm run build && docker build -t thedollmaster98/naar-marketplace -f Dockerfile . && docker push thedollmaster98/naar-marketplace",
     "docker:dev-clean": "docker rm -f angular-dev || exit 0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
